# smollagents_notes

./: README.md  main.py  pyproject.toml
sections/unit_1/: README.MD  notes.md
sections/unit_2/: document_analysis.py  first_langgraph.py  notes.md
sections/unit_5_abstractless/: README.md  my_agent.py
