[project]
name = "smolagents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langfuse>=3.5.1",
    "langgraph>=0.6.7",
    "smolagents[litellm]>=1.21.3",
]
